--- a/app/templates/land.html
+++ b/app/templates/land.html
@@ -196,11 +196,11 @@
                 class="dropdown-icon">&#9660;</span> </button>
         <div class="dropdown-container" style="background-color: transparent;">
             <a href="#" class="w3-bar-item w3-button">Sales <span class="dropdown-icon">&#9660;</span> </a>
-            <button class="w3-bar-item w3-button nested-dropdown-btn" style="font-size: medium;color: #f1f1f1;">Stock
-                report <span class="dropdown-icon">&#9660;</span> </button>
+            <button class="w3-bar-item w3-button nested-dropdown-btn" style="font-size: medium;color: #f1f1f1;">Sales order Details
+                <span class="dropdown-icon">&#9660;</span> </button>
             <div class="nested-dropdown-container" style="background-color: transparent;">
                 <a href="#" class="w3-bar-item w3-button">Sales</a>
-                <a href="{% url 'purchase' %}" class="w3-bar-item w3-button" id="dropd">Sales by Customer</a>
+                <a href="{% url 'purchase' %}" class="w3-bar-item w3-button" id="dropd">Receivables</a>
                 <a href="#" class="w3-bar-item w3-button">Accounts payable </a>
             </div>
             <a href="#" class="w3-bar-item w3-button">Accounts payable <span class="dropdown-icon">&#9660;</span> </a>
