--- a/app/templates/purchase.html
+++ b/app/templates/purchase.html
@@ -67,12 +67,6 @@
             /* Initially hidden */
         }
 
-        .popup-menu {
-            display: none;
-            position: absolute;
-            /* background: rgb(2, 57, 80);
-            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1); */
-        }
 
         .w3-sidebar a {
             padding: 10px 15px;
@@ -108,7 +102,9 @@
             margin-top: 200px;
         }
 
-
+        #creport {
+            display: none;
+        }
 
         .highlight {
             background-color: blueviolet;
@@ -135,6 +131,7 @@
             margin-top: 8px;
             transition: 0.3s;
         }
+
 
         .w3-sidebar .nested-dropdown-btn {
             font-size: medium;
@@ -167,6 +164,10 @@
             background-color: #e9e9e9;
             padding-left: 30px;
             /* Indent nested dropdown options */
+        }
+
+        #popup {
+            display: none;
         }
 
         .dropdown-icon {
@@ -210,15 +211,18 @@
                 class="dropdown-icon">&#9660;</span> </button>
         <div class="dropdown-container" style="background-color: transparent;">
             <a href="#" class="w3-bar-item w3-button">Sales <span class="dropdown-icon">&#9660;</span> </a>
-            <button class="w3-bar-item w3-button nested-dropdown-btn" style="font-size: medium;color: #f1f1f1;">Stock
-                report <span class="dropdown-icon">&#9660;</span> </button>
+            <button class="w3-bar-item w3-button nested-dropdown-btn" style="font-size: medium;color: #f1f1f1;">Sales order Details
+                <span class="dropdown-icon">&#9660;</span> </button>
             <div class="nested-dropdown-container" style="background-color: transparent;">
                 <a href="#" class="w3-bar-item w3-button">Sales</a>
-                <a href="#" class="w3-bar-item w3-button" id="dropd">Sales by Customer</a>
-                <a href="#" class="w3-bar-item w3-button">Accounts payable </a>
+                <a href="{% url 'purchase' %}" class="w3-bar-item w3-button" id="dropd">Receivables</a>
+                <a href="" class="w3-bar-item w3-button">Accounts payable </a>
             </div>
             <a href="#" class="w3-bar-item w3-button">Accounts payable <span class="dropdown-icon">&#9660;</span> </a>
         </div>
+        <a href="{%url 'logout' %}" class="nav-link"
+            style="color: rgb(245, 247, 249);font-weight: bold; font-size: medium; outline: none; border: none;margin-left: 5px;"
+            id="log" type="button" class="btn">Logout</a>
     </div>
     <div class="container" style="margin-top: 96px;background-color:rgb(27, 26, 29);height: max-content;">
         <div class="container">
@@ -229,7 +233,8 @@
             </div><br>
             <div class="row">
                 <div class="col-md-8">
-                    <button style="font-weight: bold;font-size: medium;border: none;border-radius: 3px;">Customer
+                    <button style="font-weight: bold;font-size: medium;border: none;border-radius: 3px;"
+                        id="customize">Customize
                         Report</button>
                 </div>
                 <div class="col-md-4">
@@ -254,21 +259,40 @@
                 </div>
             </div><br>
             <div class="row">
-                <div class="col-md-6">
-                    <form method="POST" action="{%url 'datefilter' %}">
-                        {% csrf_token %}
-
-                        <input type="date" id="start-date" name="start_date">
-
-                        <input type="date" id="end-date" name="end_date">
-                        <button type="submit">Run Report</button>
-                    </form>
+                <div class="col-md-6" style="background-color:rgb(2, 57, 80);" id="creport">
+                    <div class="row">
+                        <form method="POST" action="{%url 'datefilter' %}" style="padding: 10px 10px 10px 10px">
+                            {% csrf_token %}
+                            <div>
+                                <label for="" style="color: #f1f1f1;">Filter by date</label><br>
+                                <!-- <button id="closereport" style="background-color:rgb(255, 255, 255);color: rgb(27, 26, 26)">X</button> -->
+                            </div>
+                            <input type="date" id="start-date" name="start_date" required>
+                            <input type="date" id="end-date" name="end_date" required><br>
+                            <label for="" style="color: #f1f1f1;margin-top: 20px;">Filter by status</label><br>
+                            <div>
+                                <select name="select" id="select" required>
+                                    <option value="" disabled selected>Select Status</option>
+                                    <option name="category">RECURRING BILL</option>
+                                    <option name="category">BILL</option>
+                                    <option name="category">SAVE</option>
+                                    <option name="category">DRAFT</option>
+                                </select>
+                            </div><br>
+                            <button type="submit">Run Report</button>
+                        </form>
+                    </div>
                 </div>
-                <div class="col-md-6" style="display: flex;justify-content: right;">
-                    <div id="popup-menu" class="popup-menu" style="background-color: rgb(51, 71, 64);">
-                        <button id="share-whatsapp" style="background-color:rgb(2, 57, 80);color: #f1f1f1;" >Share via WhatsApp</button>
-                        <button id="share-email" style="background-color:rgb(2, 57, 80);color: #f1f1f1;" >Share via Email</button>
-                        <button id="close" style="background-color:rgb(197, 54, 19);color: #f1f1f1;" >X</button>
+                <div class="col-md-6" style="margin-top: 20px;" id="popup">
+                    <div class="row">
+                        <div id="popup-menu" class="popup-menu">
+                            <button id="share-whatsapp" style="background-color:rgb(2, 57, 80);color: #f1f1f1;">Share
+                                via
+                                WhatsApp</button>
+                            <button id="share-email" style="background-color:rgb(2, 57, 80);color: #f1f1f1;">Share via
+                                Email</button>
+                            <button id="close" style="background-color:rgb(245, 241, 240);color: #151313;">X</button>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -355,7 +379,7 @@
                                     </div>
                                 </center>
                             </td>
-                            <td>₹ {{p.total}}</td>
+                            <td style="font-weight: bold;">₹ {{p.total}}</td>
                         </tr>
                     </tbody>
                     {%endfor%}
@@ -365,13 +389,7 @@
 
     </div><br>
 
-    <div class="container">
-        <div id="popup-menu" class="popup-menu">
-            <button id="share-whatsapp">Share via WhatsApp</button>
-            <button id="share-email">Share via Email</button>
-            <button id="close">close</button>
-        </div>
-    </div>
+
 
     <footer class="footer">
         <div class="container" style="justify-content: center;align-items: center;display: flex;">
@@ -581,14 +599,21 @@
 </script>
 <script>
     document.getElementById('generate-pdf').addEventListener('click', function () {
-        var popupMenu = document.getElementById('popup-menu');
+        var popupMenu = document.getElementById('popup');
         popupMenu.style.display = 'block';
     });
     document.getElementById('close').addEventListener('click', function () {
-        var popupMenu = document.getElementById('popup-menu');
-        popupMenu.style.display = 'none';
+        var popupmenu = document.getElementById('popup');
+        popupmenu.style.display = 'none';
     });
-    
+    document.getElementById('customize').addEventListener('click', function () {
+        var report = document.getElementById('creport');
+        report.style.display = 'block';
+    });
+    // document.getElementById('closereport').addEventListener('click', function () {
+    //     var reports = document.getElementById('creport');
+    //     reports.style.display = 'none';
+    // });
 </script>
 
 </html>
